Major update: Vue3 frontend, Spring Boot backend, Adaptive RAG Agent, performance optimizations
Features:
- Vue3 + Element Plus frontend with RAG Chat and Agent Chat
- Spring Boot backend for API gateway
- Adaptive RAG Agent with smart routing and self-reflection
- RRF fusion for hybrid search (MRR=0.93)
- BM25 index caching for faster startup (~30s)
- Semantic cache for similar queries
- Multi-turn conversation support
- Query enhancement with medical term normalization

Optimizations:
- Disabled HyDE based on evaluation results
- Component reuse to reduce memory usage
- Async batch processing APIs
- Redis caching for embeddings and queries

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,16 @@ Thumbs.db
 # Docker volumes
 docker_*_data/
 docker_*_log/
+
+# Frontend
+frontend/node_modules/
+frontend/dist/
+
+# Backend Java
+backend/target/
+*.class
+*.jar
+
+# Cache
+*.pkl
+.cache/
