--- a/requirements.txt
+++ b/requirements.txt
@@ -54,6 +54,13 @@ streamlit>=1.28.0
 plotly>=5.17.0
 
 # ====================
+# FastAPI
+# ====================
+fastapi>=0.104.0
+uvicorn>=0.24.0
+pydantic>=2.5.0
+
+# ====================
 # 缓存
 # ====================
 redis>=5.0.0
@@ -79,6 +86,7 @@ nltk>=3.8.0
 tensorboard>=2.14.0
 wandb>=0.15.0
 loguru>=0.7.0
+prometheus-client>=0.19.0
 
 # ====================
 # 数据库
